# python-postgresql-example

./: README.md  pyproject.toml
src/common_utilis/: logger.py
src/config/: consts.py
