[tool.poetry]
name = "python-postgresql-example"
version = "0.1.0"
description = ""
authors = ["nobu513 <63525140+nobu513@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_postgresql_example"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
